2006.09.21: David Nichols
	* changes to make a win32 port possible
	* fixed type manager destruction when no program is executed

2006.09.16: David Nichols
	* doc updates
	* "tibrv" module: renamed namespace to "Tibrv"
	* "tibae" module: renamed namespace to "Tibae"

2006.09.12: David Nichols
	* implemented the "unreachable-code" warning
	* implemented the ability to return parse warnings if a parse mask is
	  passed to Program::parse(), ::parsePending(), or ::parseCommit() as 
	  the last argument to each respective method
	* changed parseDatasource() to correctly parse a datasource string
	  without a username or password
	* made QoreClass::name private
	* divided PO_NO_THREADS into PO_NO_THREAD_CONTROL (-R) and 
	  PO_NO_THREAD_CLASSES (-X) and respective command-line options
	* delayed QoreTypeManager initialization of default values until after
	  the default character set is set in order to ensure that NullString
	  is marked with a character set encoding
	* minor improvements to some test scripts

2006.09.10: David Nichols
	* "tibrv" module: fixed exception handling in QoreTibrvCmTransport
	* "tibae" module: updated to new internal API
	* fixed a memory leak when deleting qore classes that have pending 
	  method additions (affected builds with and without STL hash_map
	  support)
	* fixed class execution when %exec-class is not used
	* implemented the "-A" command-line option to disallow changes to the
	  warning level
	* added domain tags to builtin classes to allow for enforcing parse 
	  restrictions on class access
	* implemented logic to verify function domains of classes when using the
	  "new" operator and when declaring base classes with "inherits" - if
	  a class provides functionality restricted by the current parse options
	  an exception is thrown
	* implemented -B command-line option to disallow database access
	* implemented warning: undeclared-var
	* implemented defaultWarningHandler() to print out warnings in a user-
	  friendly way