@@ -1,6 +1,9 @@
 2006.09.21: David Nichols
 	* changes to make a win32 port possible
 	* fixed type manager destruction when no program is executed
+	* fixed a bug where auto-loaded modules were not registering their
+	  provided features so module code could be loaded more than once if a
+	  "%requires" directive for that module was parsed
 
 2006.09.16: David Nichols
 	* doc updates
